src/objects/Enhanced_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup</label>
        <referenceTo>Lookup__c</referenceTo>
        <relationshipLabel>Enhanced Lookup</relationshipLabel>
        <relationshipName>Enhanced_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Enhanced Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Enhanced Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhanced Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>